#Build aufgabe_2_und_3 
add_executable (aufgabe_2_und_3
  aufgabe_2_und_3.cpp)

#Build aufgabe_4 
add_executable (aufgabe_4
  aufgabe_4.cpp
  circle.hpp
  circle.cpp
  vec2.hpp
  vec2.cpp
  color.hpp
)

#Build aufgabe_6
add_executable (aufgabe_6
  aufgabe_6.cpp
  circle.hpp
  circle.cpp
  vec2.hpp
  vec2.cpp
  color.hpp
  )

#Build aufgabe_7_und_8
add_executable (aufgabe_7_und_8
  aufgabe_7_und_8.cpp
  circle.hpp
  circle.cpp
  vec2.hpp
  vec2.cpp
  color.hpp
  )

#Build aufgabe_9
add_executable (aufgabe_9
  aufgabe_9.cpp
  )

#Build aufgabe_10
add_executable (aufgabe_10
  aufgabe_10.cpp
  )

#Build aufgabe_11
add_executable (aufgabe_11
  aufgabe_11.cpp
  )

#Build aufgabe_12
add_executable (aufgabe_12
  aufgabe_12.cpp
  )

#Build aufgabe_13
add_executable (aufgabe_13
  aufgabe_13.cpp
  )

#Build aufgabe_14
#add_executable (aufgabe_14
#  aufgabe_14.cpp
#  )